spec/fixtures/test_suites/malformed/invalid_methods_defined/all.rb
class All < TestCaseTemplate
  @description = 'testcase for test'
  @requires = 'Individual'
  @protocol = 'test'
  @author = 'test'
  def attack
    nil
  end

  def target_ports
    nil
  end

  def attack_on_ports(_)
    nil
  end
end
